# foo-cpp

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  foo.hpp  main.cpp
tests/: catch-wrapper.hpp  test_foo.cpp
